[tool.poetry]
name = "Swiple"
version = "0.1.0"
description = ""
authors = ["Kenton Parton <info@swiple.io"]
license = "Elastic License 2.0"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.10"
numpy = ">=1.23.1"
scipy = ">=1.9.0"
great-expectations = "0.15.0"
fastapi = "0.71.0"
fastapi-users-db-opensearch = {git = "https://github.com/KentonParton/fastapi-users-db-opensearch.git", rev = "78f7aff0480400bbeac01f12c17e04f1ae21fbed"}
APScheduler = "3.9.1"
boto3 = ">=1.24.7"
opensearch-py = {version = "1.0.0", extras = ["async"]}
uvicorn = "^0.18.2"
SQLAlchemy = "==1.4.27"
asyncio = "^3.4.3"
redis = "^4.3.4"
emails = "^0.6"
fastapi-users = "9.2.2"
httpx-oauth = "^0"
PyYAML = "^6.0"

psycopg2-binary = { version = ">=2.7.6", optional = true }
snowflake-connector-python = { version = ">=2.7.11", optional = true }
snowflake-sqlalchemy = { version = ">=1.4.0", optional = true }
PyMySQL = { version = ">=0.9.3,<0.10", optional = true }
pyathena = { version = ">=1.11", optional = true }
sqlalchemy-redshift = { version = ">=0.7.7", optional = true }
trino = { version = ">=0.310.0", optional = true }

[tool.poetry.extras]
postgres = ["psycopg2-binary"]
redshift = [
    "sqlalchemy-redshift",
    "psycopg2-binary"
]
snowflake = [
    "snowflake-connector-python",
    "snowflake-sqlalchemy"
]
mysql = ["PyMySQL"]
athena = ["pyathena"]
trino = ["trino"]


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

